Realizada correções no template jinja2 'zabbix_agentd.conf.js

--- a/templates/zabbix_agentd.conf.j2
+++ b/templates/zabbix_agentd.conf.j2
@@ -132,6 +132,12 @@ ListenPort={{ zabbix_agent_port | default('10050') }}
 # Default:
 # StartAgents=3
 
+{% if zabbix_agent_mode == "ativo" %}
+StartAgents=0
+{% else %}
+StartAgents=3
+{% endif %}
+
 ##### Active checks related
 
 ### Option: ServerActive
